# git_cache_gateway

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  log  pyproject.toml
examples/: config.toml  docker-compose.yml  gitlab-ci.yml
git_cache_gateway/: cli.py  config.py  gitlab_api.py  locks.py  metrics.py  mirror.py  scheduler.py  server.py  urlmap.py  util.py
scripts/: docker-entrypoint.sh  install-ca-certificates.sh  install-client.sh  test-docker.sh  uninstall-client.sh
tests/: test_config_defaults.py  test_default_branch_repair.py  test_docker_ca_support.py  test_git_transport_tuning.py  test_gitlab_project_scan_repair.py  test_metrics.py  test_safe_push_refs.py  test_scheduler_retry.py  test_tls_config.py  test_upstream_default_branch.py  test_urlmap.py
